fix response format for best clients
